--- a/apps/web-antd/.env.production
+++ b/apps/web-antd/.env.production
@@ -1,9 +1,9 @@
 VITE_BASE=/
 
 # 请求路径
-VITE_BASE_URL=http://119.29.105.88:48080
+VITE_BASE_URL=https://admin.cdkangpei.com/
 # 接口地址
-VITE_GLOB_API_URL=http://119.29.105.88:48080/admin-api
+VITE_GLOB_API_URL=https://admin.cdkangpei.com/admin-api
 # 文件上传类型：server - 后端上传， client - 前端直连上传，仅支持S3服务
 VITE_UPLOAD_TYPE=server
 
@@ -14,7 +14,7 @@ VITE_COMPRESS=none
 VITE_PWA=false
 
 # vue-router 的模式
-VITE_ROUTER_HISTORY=hash
+VITE_ROUTER_HISTORY=history
 
 # 是否注入全局loading
 VITE_INJECT_APP_LOADING=true
